Updated hello world example in README