@@ -34,13 +34,15 @@ project("MYPROJECT") {
             description "My stage"
             manual false
 
-            job("MYJOB") {
-                name "My job"
-                description "This ismy job"
+            job("BUILD") {
+                name "Maven build job"
 
                 tasks {
                     maven3("build plug-in") {
                         goal "install"
+                        executable "maven323"
+                        buildJdk "jdk8"
+                        environmentVariables 'MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"'
                     }
                 }
             }
